Fix: MC-158 Make Outcome Non-Mandatory field

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
@@ -912,21 +912,15 @@
                             </div>
                             <div class="card-block">
                                 <div class="form-group">
-                                    <label for="CenterId">Outcome *</label>
+                                    <label for="CenterId">Outcome </label>
                                     <ss-multiselect-dropdown [options]="outcomeLookupOptionList" formControlName="OutcomeLookupId" [(ngModel)]="caseBook.Legal.OutcomeLookupArray">
                                     </ss-multiselect-dropdown>
-                                    <div>
-                                        <small *ngIf="category5Form.controls['OutcomeLookupId'].hasError('required') && category5Form.controls['OutcomeLookupId'].touched" class="mat-text-warn">Field is required.</small>
-                                    </div>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="CenterId">List all documents that the client has submitted</label>
                                     <ss-multiselect-dropdown [options]="documentsLookupOptionList" formControlName="DocumentsLookupId" [(ngModel)]="caseBook.Legal.DocumentsLookupArray">
                                     </ss-multiselect-dropdown>
-                                    <div>
-                                        <small *ngIf="category5Form.controls['DocumentsLookupId'].hasError('required') && category5Form.controls['DocumentsLookupId'].touched" class="mat-text-warn">Field is required.</small>
-                                    </div>
                                 </div>
                             </div>
                         </div>
