--- a/NexGenRedAlert/NexGenRedAlert/Views/PreSvpFormPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/PreSvpFormPage.xaml
@@ -15,7 +15,7 @@
                 </Frame>
 
                 <Label x:Name="SvpDateLabel" Text="PreSvp Date" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                <DatePicker x:Name="PreSvpDatePicker" Format="D" TextColor="Black"  Date="{Binding PreSvp.PreSvpDate}" />
+                <DatePicker x:Name="PreSvpDatePicker" Format="D" TextColor="{StaticResource Black}" Date="{Binding PreSvp.PreSvpDate}" />
 
                 <Label x:Name="DistanceToVillageLabel" Text="One Way Distance to Village (KMs):" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                 <Entry x:Name="DistanceToVillageEntry" Placeholder="kilometers" Keyboard="Numeric" Text="{Binding PreSvp.DistanceToVillageInKms}" />
@@ -24,7 +24,7 @@
                 <Entry x:Name="LocationDescEntry" Placeholder="Location Description" Text="{Binding PreSvp.LocationDesc}" />
                 
                 <Label x:Name="MajorEmploymentLabel" Text="Major Source of Income:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                <local:MultiselectEntry x:Name="MajorEmploymentEntry" Placeholder="Major Source of Income" Focused="OnFocusedMajorEmploymentEntry" Text="{Binding PreSvp.MajorSourceOfIncome}" />
+                <local:MultiselectEntry x:Name="MajorEmploymentEntry" Placeholder="Major Source of Income"  Focused="OnFocusedMajorEmploymentEntry" Text="{Binding PreSvp.MajorSourceOfIncome}" />
                 
                 <Label x:Name="ActiveCommunityLabel" Text="Mention the details of active Community Groups (SHG/CVC) to facilitate the program" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                 <Editor x:Name="ActiveCommunityDetailsEntry" Text="{Binding PreSvp.ActiveCommunityGroup}" />
